--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -1,16 +1,17 @@
 {
   "main": {
-    "id": "b207d1a89f450c5a",
+    "id": "ca11510fd01c5486",
     "type": "split",
     "children": [
       {
-        "id": "dc2944a4c483aa7f",
+        "id": "d276e3df865d36f9",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "20672 대세는 바이러스야.md",
-            "mode": "preview"
+            "file": "index.md",
+            "mode": "source",
+            "source": false
           }
         }
       }
@@ -18,15 +19,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "33b5bdc3f7c08ac4",
+    "id": "69712f13f30774e7",
     "type": "split",
     "children": [
       {
-        "id": "6c525926a257c793",
+        "id": "43779f56d6cbd595",
         "type": "tabs",
         "children": [
           {
-            "id": "749cc01e68a8c385",
+            "id": "e9a1d43f864275da",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -34,7 +35,7 @@
             }
           },
           {
-            "id": "addf4e8f4d46af28",
+            "id": "97a5b980c999e098",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -55,20 +56,20 @@
     "width": 300
   },
   "right": {
-    "id": "131d150d91ac72d5",
+    "id": "f87eda99bd2c0a97",
     "type": "split",
     "children": [
       {
-        "id": "ea1a416f40854260",
+        "id": "28f0fff3af13fef5",
         "type": "tabs",
         "children": [
           {
-            "id": "ddc8595a43d4dcf9",
+            "id": "2253710ab61b88d2",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "20672 대세는 바이러스야.md",
+                "file": "index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "dc2944a4c483aa7f",
+  "active": "d276e3df865d36f9",
   "lastOpenFiles": [
-    "20672 대세는 바이러스야.md",
-    "18796 이동하기 4.md",
-    "18700-18799.md",
-    "18000-18999.md",
-    "_HOME.md",
-    "17070 Islands.md",
-    "17000-17099.md",
-    "17000-17999.md",
+    "index.md",
+    "알고리즘.md",
     "BOJ 문제풀이.md",
-    "BOJ 문제풀이/17000-17099.md"
+    "문제풀이/1974 Jump Jump Championship.md",
+    "알고리즘/Persistent Data Structures.md",
+    "문제풀이/Pasted image 20210906005042.png",
+    "문제풀이/20846 수열과 쿼리 40.md",
+    "문제풀이/20672 대세는 바이러스야.md",
+    "문제풀이/20000-20999.md",
+    "문제풀이/18796 이동하기 4.md"
   ]
 }
