--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "알고리즘.md",
+            "file": "BOJ 문제풀이.md",
             "mode": "preview",
             "source": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "알고리즘.md",
+                "file": "BOJ 문제풀이.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "d276e3df865d36f9",
   "lastOpenFiles": [
-    "알고리즘.md",
     "BOJ 문제풀이.md",
-    "index.md",
-    "알고리즘/HLD 하나로 경로 쿼리와 서브트리 쿼리 모두 지원하기.md",
-    "알고리즘/Connection profile DP.md",
-    "알고리즘/Pasted image 20220514214107.png",
-    "알고리즘/스킵 리스트.md",
-    "Pasted image 20220514211630.png",
-    "Pasted image 20220514211508.png",
-    "알고리즘/Pasted image 20210919105157.png"
+    "문제풀이/BOJ 22906 장난감 오렌지 만들기.md",
+    "알고리즘.md",
+    "문제풀이/BOJ 18796 이동하기 4.md",
+    "문제풀이/BOJ 24943 Sightseeing in Kyoto.md",
+    "문제풀이/BOJ 20846 수열과 쿼리 40.md",
+    "문제풀이/BOJ 20672 대세는 바이러스야.md",
+    "문제풀이/BOJ 1974 Jump Jump Championship.md",
+    "문제풀이/BOJ 11064 Diameter.md",
+    "문제풀이/BOJ 17070 Islands.md"
   ]
 }
