--- a/docs/.obsidian/app.json
+++ b/docs/.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "alwaysUpdateLinks": true,
   "legacyEditor": false,
-  "livePreview": true,
+  "livePreview": false,
   "pdfExportSettings": {
     "pageSize": "Letter",
     "landscape": false,
