--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "BOJ 문제풀이.md",
+            "file": "문제풀이/BOJ 18857-18867 제1회 논산 코드 페스티벌.md",
             "mode": "preview",
             "source": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "BOJ 문제풀이.md",
+                "file": "문제풀이/BOJ 18857-18867 제1회 논산 코드 페스티벌.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "d276e3df865d36f9",
   "lastOpenFiles": [
+    "문제풀이/BOJ 18857-18867 제1회 논산 코드 페스티벌.md",
     "BOJ 문제풀이.md",
-    "문제풀이/BOJ 22906 장난감 오렌지 만들기.md",
-    "알고리즘.md",
-    "문제풀이/BOJ 18796 이동하기 4.md",
-    "문제풀이/BOJ 24943 Sightseeing in Kyoto.md",
-    "문제풀이/BOJ 20846 수열과 쿼리 40.md",
+    "문제풀이/BOJ 18766-18771, 19529, 19240-19244, 19592-19597.md",
+    "문제풀이/BOJ 20665-20672 shake! 2020.md",
+    "알고리즘/볼록다각형 내부 점 빠르게 판별.md",
     "문제풀이/BOJ 20672 대세는 바이러스야.md",
-    "문제풀이/BOJ 1974 Jump Jump Championship.md",
-    "문제풀이/BOJ 11064 Diameter.md",
-    "문제풀이/BOJ 17070 Islands.md"
+    "알고리즘/BOJ 19657 Explore.md",
+    "알고리즘.md",
+    "알고리즘/링크-컷 트리.md",
+    "index.md"
   ]
 }
