--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "문제풀이/BOJ 18857-18867 제1회 논산 코드 페스티벌.md",
+            "file": "BOJ 문제풀이.md",
             "mode": "preview",
             "source": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "문제풀이/BOJ 18857-18867 제1회 논산 코드 페스티벌.md",
+                "file": "BOJ 문제풀이.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "d276e3df865d36f9",
   "lastOpenFiles": [
-    "문제풀이/BOJ 18857-18867 제1회 논산 코드 페스티벌.md",
     "BOJ 문제풀이.md",
-    "문제풀이/BOJ 18766-18771, 19529, 19240-19244, 19592-19597.md",
-    "문제풀이/BOJ 20665-20672 shake! 2020.md",
-    "알고리즘/볼록다각형 내부 점 빠르게 판별.md",
-    "문제풀이/BOJ 20672 대세는 바이러스야.md",
-    "알고리즘/BOJ 19657 Explore.md",
-    "알고리즘.md",
-    "알고리즘/링크-컷 트리.md",
-    "index.md"
+    "문제풀이_미완성/BOJ 1906 자리 바꾸기.md",
+    "index.md",
+    "문제풀이/Pasted image 20220529171103.png",
+    "문제풀이/Pasted image 20220529164901.png",
+    "문제풀이/BOJ 14755 Pseudoknot.md",
+    "문제풀이/BOJ 17838-17845 제1회 UNIST 알고리즘 프로그래밍 경시대회 Uni-CODE.md",
+    "기타/피보나치 수열 mod M의 주기.md",
+    "알고리즘/재귀적 구조의 k번째 원소 구하기.md",
+    "문제풀이/BOJ 18221-18227 2019 Overflow Programming Contest (OPC).md"
   ]
 }
